Update docs and swarm seed options

--- a/static/index.html
+++ b/static/index.html
@@ -66,6 +66,13 @@
             <option value="">No assessment</option>
           </select>
         </div>
+        <div>
+          <label for="use-assessment-seeds">Use assessment idea prompts</label>
+          <select id="use-assessment-seeds">
+            <option value="no">No</option>
+            <option value="yes">Yes</option>
+          </select>
+        </div>
         <button type="submit">Start Swarm</button>
       </form>
       <div id="run-message" class="hint"></div>
