Add review PDF ingestion and section indexing

--- a/static/index.html
+++ b/static/index.html
@@ -187,6 +187,10 @@
           <label for="review-method">Method family</label>
           <input type="text" id="review-method" placeholder="DiD / SCM / Qualitative" />
 
+          <label for="review-pdf">Attach PDF (existing file in reviews/pdfs/&lt;id&gt;/)</label>
+          <input type="text" id="review-pdf" placeholder="filename.pdf" />
+          <button type="button" id="review-attach">Attach PDF</button>
+
           <button type="submit">Create Review</button>
           <div id="review-message" class="hint"></div>
         </form>
