Harden review parsing and surface validation warnings

--- a/static/index.html
+++ b/static/index.html
@@ -211,6 +211,7 @@
 
     <section class="panel">
       <h2>Review Detail</h2>
+      <div id="review-warning" class="hint"></div>
       <div id="review-detail" class="detail">
         <p>Select a review to view its details.</p>
       </div>
