Add review PDF upload endpoint and UI

--- a/static/index.html
+++ b/static/index.html
@@ -193,6 +193,10 @@
           <label for="review-model">Model</label>
           <input type="text" id="review-model" placeholder="Default" />
 
+          <label for="review-pdf-upload">Upload PDF</label>
+          <input type="file" id="review-pdf-upload" accept=".pdf" />
+          <button type="button" id="review-upload">Upload PDF</button>
+
           <label for="review-pdf">Attach PDF (existing file in reviews/pdfs/&lt;id&gt;/)</label>
           <input type="text" id="review-pdf" placeholder="filename.pdf" />
           <button type="button" id="review-attach">Attach PDF</button>
