Add review language selection

--- a/static/index.html
+++ b/static/index.html
@@ -187,6 +187,12 @@
           <label for="review-method">Method family</label>
           <input type="text" id="review-method" placeholder="DiD / SCM / Qualitative" />
 
+          <label for="review-language">Language</label>
+          <select id="review-language">
+            <option value="en" selected>English</option>
+            <option value="pt">Portuguese</option>
+          </select>
+
           <label for="review-provider">Provider</label>
           <select id="review-provider"></select>
 
