--- a/static/index.html
+++ b/static/index.html
@@ -8,224 +8,266 @@
 </head>
 <body>
   <div class="app">
-    <header class="app-header">
-      <div>
-        <h1>IPE Breakthrough Idea Swarm</h1>
-        <p>Single-page dashboard for running the agent swarm and reviewing idea dossiers.</p>
+    <header class="app-header hero">
+      <div class="hero-text">
+        <div class="eyebrow">IPE Research Operations</div>
+        <h1>Breakthrough Idea Swarm</h1>
+        <p>Orchestrate ambitious IPE ideas and APSR-level reviews with design-only rigor and grounded diagnostics.</p>
+        <div class="hero-actions">
+          <span class="chip">Design-only pipeline</span>
+          <span class="chip">Review mode (paper/project)</span>
+          <span class="chip">Grounded memos</span>
+        </div>
       </div>
       <div class="status" id="session-status">Session locked</div>
     </header>
 
-    <section class="panel">
-      <h2>Session</h2>
-      <form id="unlock-form" class="form-row">
-        <input type="password" id="passphrase" placeholder="Enter passphrase" required />
-        <button type="submit">Unlock</button>
-      </form>
-      <div class="hint">Passphrase is required to encrypt/decrypt provider keys for this session.</div>
-      <div class="hint">Keys are stored encrypted at rest in local SQLite and never sent elsewhere.</div>
-      <div class="action-row">
-        <button type="button" id="restart-server" class="button-secondary">Restart Server</button>
-        <span id="server-message" class="hint"></span>
-      </div>
-    </section>
-
-    <section class="panel">
-      <h2>Provider Credentials</h2>
-      <form id="credentials-form" class="form-row">
-        <select id="provider"></select>
-        <input type="text" id="provider-name" placeholder="Label (optional)" />
-        <input type="password" id="api-key" placeholder="API key" required />
-        <button type="submit">Save</button>
-      </form>
-      <div id="credential-list" class="list"></div>
-    </section>
-
-    <section class="panel">
-      <h2>Start Swarm</h2>
-      <form id="run-form" class="form-grid">
-        <div>
-          <label for="run-provider">Provider</label>
-          <select id="run-provider"></select>
-        </div>
-        <div>
-          <label for="run-model">Model</label>
-          <input type="text" id="run-model" placeholder="Default" />
-        </div>
-        <div>
-          <label for="idea-count">Idea count</label>
-          <input type="number" id="idea-count" min="1" max="5" value="1" />
-        </div>
-        <div>
-          <label for="topic-focus">Topic focus (optional)</label>
-          <input type="text" id="topic-focus" placeholder="e.g., financial statecraft" />
-        </div>
-        <div>
-          <label for="run-literature">Literature query (optional)</label>
-          <select id="run-literature">
-            <option value="">No assessment</option>
-          </select>
-        </div>
-        <div>
-          <label for="use-assessment-seeds">Use assessment idea prompts</label>
-          <select id="use-assessment-seeds">
-            <option value="no">No</option>
-            <option value="yes">Yes</option>
-          </select>
-        </div>
-        <button type="submit">Start Swarm</button>
-      </form>
-      <div id="run-message" class="hint"></div>
-    </section>
-
-    <section class="panel">
-      <h2>Literature Review</h2>
-      <form id="literature-form" class="form-grid">
-        <div>
-          <label for="literature-query">Search query</label>
-          <input type="text" id="literature-query" placeholder="e.g., sanctions enforcement networks" required />
-        </div>
-        <div>
-          <label for="openalex-email">OpenAlex email (required)</label>
-          <input type="email" id="openalex-email" placeholder="you@example.com" required />
-        </div>
-        <div>
-          <label for="semantic-key">Semantic Scholar API key (optional)</label>
-          <input type="password" id="semantic-key" placeholder="API key" />
-        </div>
-        <div>
-          <label for="literature-limit">Per-source limit</label>
-          <input type="number" id="literature-limit" min="5" max="50" value="20" />
-        </div>
-        <div class="source-box">
-          <label>Sources</label>
-          <label><input type="checkbox" id="source-openalex" checked /> OpenAlex</label>
-          <label><input type="checkbox" id="source-crossref" checked /> Crossref</label>
-          <label><input type="checkbox" id="source-semantic" /> Semantic Scholar</label>
-        </div>
-        <div class="source-box">
-          <label>Content filter</label>
-          <label><input type="checkbox" id="include-non-article" /> Include books/chapters</label>
-        </div>
-        <button type="submit">Run Review</button>
-      </form>
-      <div id="literature-message" class="hint"></div>
-      <div class="hint">For institutional PDFs, drop files into literature/pdfs/&lt;query_id&gt;/ and rerun the review.</div>
-      <div class="split">
-        <div>
-          <h3>Queries</h3>
-          <div id="literature-list" class="list"></div>
-        </div>
-        <div>
-          <h3>Assessment</h3>
-          <div id="literature-detail" class="detail">
-            <p>No query selected.</p>
+    <main class="app-grid">
+      <div class="column">
+        <section class="panel panel--session" style="--panel-index: 1;">
+          <div class="panel-header">
+            <h2>Session Control</h2>
+            <span class="panel-meta">Security and runtime</span>
           </div>
-        </div>
-      </div>
-      <div id="literature-works-output" class="detail full-width">
-        <p>No works loaded.</p>
-      </div>
-      <div id="literature-assessment-output" class="detail full-width">
-        <p>No assessment loaded.</p>
-      </div>
-    </section>
+          <form id="unlock-form" class="form-row">
+            <input type="password" id="passphrase" placeholder="Enter passphrase" required />
+            <button type="submit">Unlock</button>
+          </form>
+          <div class="hint">Passphrase encrypts provider keys for this session.</div>
+          <div class="hint">Keys are stored encrypted at rest in local SQLite.</div>
+          <div class="action-row">
+            <button type="button" id="restart-server" class="button-secondary">Restart Server</button>
+            <span id="server-message" class="hint"></span>
+          </div>
+        </section>
 
-    <section class="panel split">
-      <div>
-        <h2>Runs</h2>
-        <div id="run-list" class="list"></div>
-      </div>
-      <div>
-        <h2>Ideas</h2>
-        <div class="action-row">
-          <label for="idea-status-filter">Status</label>
-          <select id="idea-status-filter">
-            <option value="all">All</option>
-            <option value="resubmitted">Resubmitted</option>
-            <option value="none">Unassigned</option>
-            <option value="other">Other</option>
-          </select>
-        </div>
-        <div id="idea-list" class="list"></div>
-      </div>
-    </section>
+        <section class="panel panel--providers" style="--panel-index: 2;">
+          <div class="panel-header">
+            <h2>Provider Vault</h2>
+            <span class="panel-meta">Credentials for LLM access</span>
+          </div>
+          <form id="credentials-form" class="form-row">
+            <select id="provider"></select>
+            <input type="text" id="provider-name" placeholder="Label (optional)" />
+            <input type="password" id="api-key" placeholder="API key" required />
+            <button type="submit">Save</button>
+          </form>
+          <div id="credential-list" class="list"></div>
+        </section>
 
-    <section class="panel">
-      <h2>Idea Dossier</h2>
-      <div id="idea-detail" class="detail">
-        <p>Select an idea to view its dossier.</p>
-      </div>
-    </section>
+        <section class="panel panel--swarm" style="--panel-index: 3;">
+          <div class="panel-header">
+            <h2>Swarm Launch</h2>
+            <span class="panel-meta">Idea generation and gates</span>
+          </div>
+          <form id="run-form" class="form-grid">
+            <div>
+              <label for="run-provider">Provider</label>
+              <select id="run-provider"></select>
+            </div>
+            <div>
+              <label for="run-model">Model</label>
+              <input type="text" id="run-model" placeholder="Default" />
+            </div>
+            <div>
+              <label for="idea-count">Idea count</label>
+              <input type="number" id="idea-count" min="1" max="5" value="1" />
+            </div>
+            <div>
+              <label for="topic-focus">Topic focus (optional)</label>
+              <input type="text" id="topic-focus" placeholder="e.g., financial statecraft" />
+            </div>
+            <div>
+              <label for="run-literature">Literature query (optional)</label>
+              <select id="run-literature">
+                <option value="">No assessment</option>
+              </select>
+            </div>
+            <div>
+              <label for="use-assessment-seeds">Use assessment idea prompts</label>
+              <select id="use-assessment-seeds">
+                <option value="no">No</option>
+                <option value="yes">Yes</option>
+              </select>
+            </div>
+            <button type="submit">Start Swarm</button>
+          </form>
+          <div id="run-message" class="hint"></div>
+        </section>
 
-    <section class="panel split">
-      <div>
-        <h2>Review</h2>
-        <form id="review-form" class="stack">
-          <label for="review-type">Review type</label>
-          <select id="review-type" required>
-            <option value="paper">Paper</option>
-            <option value="project">Project</option>
-          </select>
-
-          <div id="review-level-wrapper">
-            <label for="review-level">Project level</label>
-            <select id="review-level">
-              <option value="IC">IC</option>
-              <option value="Mestrado">Mestrado</option>
-              <option value="Doutorado">Doutorado</option>
-              <option value="FAPESP">FAPESP</option>
+        <section class="panel panel--review" style="--panel-index: 4;">
+          <div class="panel-header">
+            <h2>Review Studio</h2>
+            <span class="panel-meta">Paper and project reviews</span>
+          </div>
+          <form id="review-form" class="stack">
+            <label for="review-type">Review type</label>
+            <select id="review-type" required>
+              <option value="paper">Paper</option>
+              <option value="project">Project</option>
             </select>
+
+            <div id="review-level-wrapper">
+              <label for="review-level">Project level</label>
+              <select id="review-level">
+                <option value="IC">IC</option>
+                <option value="Mestrado">Mestrado</option>
+                <option value="Doutorado">Doutorado</option>
+                <option value="FAPESP">FAPESP</option>
+              </select>
+            </div>
+
+            <label for="review-title">Title</label>
+            <input type="text" id="review-title" placeholder="Optional title" />
+
+            <label for="review-domain">Domain</label>
+            <input type="text" id="review-domain" placeholder="IPE" />
+
+            <label for="review-method">Method family</label>
+            <input type="text" id="review-method" placeholder="DiD / SCM / Qualitative" />
+
+            <label for="review-language">Language</label>
+            <select id="review-language">
+              <option value="en" selected>English</option>
+              <option value="pt">Portuguese</option>
+            </select>
+
+            <label for="review-provider">Provider</label>
+            <select id="review-provider"></select>
+
+            <label for="review-model">Model</label>
+            <input type="text" id="review-model" placeholder="Default" />
+
+            <label for="review-pdf-upload">Upload PDF</label>
+            <input type="file" id="review-pdf-upload" accept=".pdf" />
+            <button type="button" id="review-upload">Upload PDF</button>
+
+            <label for="review-pdf">Attach PDF (existing file in reviews/pdfs/&lt;id&gt;/)</label>
+            <input type="text" id="review-pdf" placeholder="filename.pdf" />
+            <button type="button" id="review-attach">Attach PDF</button>
+
+            <button type="button" id="review-run">Run Review (LLM)</button>
+
+            <button type="submit">Create Review</button>
+            <div id="review-message" class="hint"></div>
+          </form>
+        </section>
+      </div>
+
+      <div class="column">
+        <section class="panel panel--literature" style="--panel-index: 1;">
+          <div class="panel-header">
+            <h2>Literature Radar</h2>
+            <span class="panel-meta">Assessments and PDF ingest</span>
           </div>
+          <form id="literature-form" class="form-grid">
+            <div>
+              <label for="literature-query">Search query</label>
+              <input type="text" id="literature-query" placeholder="e.g., sanctions enforcement networks" required />
+            </div>
+            <div>
+              <label for="openalex-email">OpenAlex email (required)</label>
+              <input type="email" id="openalex-email" placeholder="you@example.com" required />
+            </div>
+            <div>
+              <label for="semantic-key">Semantic Scholar API key (optional)</label>
+              <input type="password" id="semantic-key" placeholder="API key" />
+            </div>
+            <div>
+              <label for="literature-limit">Per-source limit</label>
+              <input type="number" id="literature-limit" min="5" max="50" value="20" />
+            </div>
+            <div class="source-box">
+              <label>Sources</label>
+              <label><input type="checkbox" id="source-openalex" checked /> OpenAlex</label>
+              <label><input type="checkbox" id="source-crossref" checked /> Crossref</label>
+              <label><input type="checkbox" id="source-semantic" /> Semantic Scholar</label>
+            </div>
+            <div class="source-box">
+              <label>Content filter</label>
+              <label><input type="checkbox" id="include-non-article" /> Include books/chapters</label>
+            </div>
+            <button type="submit">Run Review</button>
+          </form>
+          <div id="literature-message" class="hint"></div>
+          <div class="hint">For institutional PDFs, drop files into literature/pdfs/&lt;query_id&gt;/ and rerun the review.</div>
+          <div class="split">
+            <div>
+              <h3>Queries</h3>
+              <div id="literature-list" class="list"></div>
+            </div>
+            <div>
+              <h3>Assessment</h3>
+              <div id="literature-detail" class="detail">
+                <p>No query selected.</p>
+              </div>
+            </div>
+          </div>
+          <div id="literature-works-output" class="detail full-width">
+            <p>No works loaded.</p>
+          </div>
+          <div id="literature-assessment-output" class="detail full-width">
+            <p>No assessment loaded.</p>
+          </div>
+        </section>
 
-          <label for="review-title">Title</label>
-          <input type="text" id="review-title" placeholder="Optional title" />
+        <section class="panel panel--runs" style="--panel-index: 2;">
+          <div class="panel-header">
+            <h2>Runs and Ideas</h2>
+            <span class="panel-meta">Queue, status, and gates</span>
+          </div>
+          <div class="split">
+            <div>
+              <h3>Runs</h3>
+              <div id="run-list" class="list"></div>
+            </div>
+            <div>
+              <h3>Ideas</h3>
+              <div class="action-row">
+                <label for="idea-status-filter">Status</label>
+                <select id="idea-status-filter">
+                  <option value="all">All</option>
+                  <option value="resubmitted">Resubmitted</option>
+                  <option value="none">Unassigned</option>
+                  <option value="other">Other</option>
+                </select>
+              </div>
+              <div id="idea-list" class="list"></div>
+            </div>
+          </div>
+        </section>
 
-          <label for="review-domain">Domain</label>
-          <input type="text" id="review-domain" placeholder="IPE" />
+        <section class="panel panel--idea" style="--panel-index: 3;">
+          <div class="panel-header">
+            <h2>Idea Dossier</h2>
+            <span class="panel-meta">Pitches, designs, and memos</span>
+          </div>
+          <div id="idea-detail" class="detail">
+            <p>Select an idea to view its dossier.</p>
+          </div>
+        </section>
 
-          <label for="review-method">Method family</label>
-          <input type="text" id="review-method" placeholder="DiD / SCM / Qualitative" />
-
-          <label for="review-language">Language</label>
-          <select id="review-language">
-            <option value="en" selected>English</option>
-            <option value="pt">Portuguese</option>
-          </select>
-
-          <label for="review-provider">Provider</label>
-          <select id="review-provider"></select>
-
-          <label for="review-model">Model</label>
-          <input type="text" id="review-model" placeholder="Default" />
-
-          <label for="review-pdf-upload">Upload PDF</label>
-          <input type="file" id="review-pdf-upload" accept=".pdf" />
-          <button type="button" id="review-upload">Upload PDF</button>
-
-          <label for="review-pdf">Attach PDF (existing file in reviews/pdfs/&lt;id&gt;/)</label>
-          <input type="text" id="review-pdf" placeholder="filename.pdf" />
-          <button type="button" id="review-attach">Attach PDF</button>
-
-          <button type="button" id="review-run">Run Review (LLM)</button>
-
-          <button type="submit">Create Review</button>
-          <div id="review-message" class="hint"></div>
-        </form>
+        <section class="panel panel--reviews" style="--panel-index: 4;">
+          <div class="panel-header">
+            <h2>Review Archive</h2>
+            <span class="panel-meta">Stored reviews and details</span>
+          </div>
+          <div class="split">
+            <div>
+              <h3>Reviews</h3>
+              <div id="review-list" class="list"></div>
+            </div>
+            <div>
+              <h3>Review Detail</h3>
+              <div id="review-warning" class="hint"></div>
+              <div id="review-detail" class="detail">
+                <p>Select a review to view its details.</p>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
-      <div>
-        <h2>Reviews</h2>
-        <div id="review-list" class="list"></div>
-      </div>
-    </section>
-
-    <section class="panel">
-      <h2>Review Detail</h2>
-      <div id="review-warning" class="hint"></div>
-      <div id="review-detail" class="detail">
-        <p>Select a review to view its details.</p>
-      </div>
-    </section>
+    </main>
   </div>
 
   <script src="/static/app.js"></script>
